# qgsoftrenderer

./: .gitignore  CMakeLists.txt  README.md
assets/scenes/: pointlight.scene
renderer/: CMakeLists.txt  context.hpp  frame_buffer.cpp  frame_buffer.hpp  light.hpp  mesh.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  pixel_sampler.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp
renderer/platform/: win_app.cpp  win_app.hpp
renderer/textures/: cubemap.hpp  texture.cpp  texture.hpp  texture_holder.hpp
renderer/utils/: math_utils.hpp  parallel_wrapper.hpp  timer.hpp
script/: build.bat  build_SDL2.bat  build_assimp.bat  build_glm.bat  build_tbb.bat
test/: CMakeLists.txt  main.cpp
